@@ -3,6 +3,7 @@
 Version 3.2.4.6 'Marshal West':
 	- List of libraries cleaned.
 	- rtcp sockets fixed.
+	- TCP bufferevent concurrency fixed.
 
 10/16/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.2.4.5 'Marshal West':
